crates/fai-tests/tests/fixtures/errors/NoImplicitCoercion.fai
module NoImplicitCoercion

// Arithmetic is overloaded over Int and Float, but never coerces between them.
// `floatToInt 1.0` is an `Int` and `2.0` is a `Float`, so `+` cannot unify them
// (the fix is to convert explicitly with `intToFloat`).
//~ ERROR FAI3001
let badAdd = Float.toInt 1.0 + 2.0

// Structural comparison likewise needs both sides at one numeric type: here an
// `Int` from `floatToInt` against a `Float` literal.
//~ ERROR FAI3001
let badCompare = 2.0 < Float.toInt 1.0
